@@ -1,3 +1,11 @@
+2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-12-00
+	* protect against spurious storage manager discards (data & dqm)
+	* protect actionPerformed(), monitoring(), watching(),
+	customWebPage(), and halting() against access to resourceTable_
+	pointer after it has been destroyed (on halting())
+
 2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-11-00
